refactor: updated to 1.19.3